<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Вчат</string>
    <string name="string_to_continue">Продолжить</string>
    <string name="welcome_text">Вчат. Добро пожаловать</string>
    <string name="login_text">Вход</string>
    <string name="registration_text">Регистрация</string>
    <string name="your_name_text">Ваше имя</string>
    <string name="your_nickname_text">Ваш никнейм</string>
    <string name="forvard_text">Вперед!</string>
    <string name="error_message_for_spinner">Невозможный вариант!</string>
    <string name="error_message_for_name">Невозможное имя!</string>
    <string name="error_message_for_nickname">Невозможный никнейм!</string>
    <string name="nickname_is_taken">Этот никнейм уже занят</string>
    <string name="connection_problems">Проблемы с подключением, попробуйте пойже</string>
    <string name="password_enter_text">Введите пароль</string>
    <string name="error_message_for_nickname_not_found">Никнейм не найден! Введите другой никнейм или зарегистрируйтесь</string>
    <string name="password_name">Создание пароля</string>
    <string name="password_text_hint">Пароль</string>
    <string name="password_confirmation_hint">Подтверждение пароля</string>
    <string name="password_condition">8 символов; большие и маленькие латинские буквы; цифры</string>
    <string name="password_confirmation">Пароли должны совпадать</string>
    <string name="length_password_error">Пароль должен быть не менее 8 символов</string>
    <string name="password_number_error">Пароль должен содержать хотя бы одну цифру</string>
    <string name="password_uppercase_error">Пароль должен содержать заглавные буквы</string>
    <string name="password_lowercase_error">Пароль должен содержать строчные буквы</string>
    <string name="special_symbols_error">Пароль должен содержать спецсимволы</string>
    <string name="passwords_trash_error">Пароль должен содержать только цифры, буквы и спецсимволы</string>
    <string name="secret_key_text">Ваш секретный ключ</string>
    <string name="secret_key_info_text">Запомните или запишите эти 5 слов. При помощи них вы ссможете восстановить забытый пароль!</string>
    <string name="wrong_password">Неверный пароль!</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="secret_key">Подтвердите, что это точно вы</string>
    <string name="secret_key_hint_text">Введите три слова, стоящих под данными номерами в секретном ключе</string>
    <string name="warning_text">Неверные ключи</string>
    <string name="no_messages">Сообщений нет</string>
    <string name="no_dialog_selected">Выберите чат</string>
    <string name="message">Сообщение</string>
    <string name="choose_your_photo">Выбери фотографию своего профиля</string>
    <string name="skip">Пропустить</string>
    <string name="select_image_from">Выберите изображение из</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галлерея</string>
    <string name="cancel">Отмена</string>
    <string name="create">Создать</string>
    <string name="group">Новая группа</string>
    <string name="channel">Новый канал</string>
    <string name="enter_name_group">Введите имя группы</string>
    <string name="enter_name_channel">Введите имя канала</string>
    <string name="ready">Готово</string>
    <string name="enter_nickname_for_channel">Введите никнейм канала</string>
    <string name="change">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="delete_ava">Удалить фото?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="search_chat">Имя чата</string>
    <string name="no_results">Нет результатов</string>
    <string name="text_of_message">Текст сообщения</string>
    <string name="no_matches">Совпадений нет</string>
    <string name="from">из</string>
    <string name="channel_text">Вы подписаны</string>
    <string name="user_activity_name_fragment_hint">Нажмите, чтобы изменить имя</string>
    <string name="user_activity_nickname_fragment_hint">Нажмите, чтобы изменить никнейм</string>
    <string name="new_name">Новое имя</string>
    <string name="new_nickname">Новый никнейм</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_secret_key">Изменить секретный ключ</string>
    <string name="name_changed">Имя изменено</string>
    <string name="nickname_changed">Никнейм изменен</string>
    <string name="fingerprint_hint">Чтобы продолжить, отсканируйте отпечаток пальца или используйте другой метод аунтификации</string>
    <string name="regenerate">Перегенерировать</string>
    <string name="secret_key_regenerated">Секретный ключ был перегенерирован</string>
    <string name="authentication_error">Ошибка аутентификация</string>
    <string name="authentication_failed">Не удалось аутентифицировать пользователя</string>
    <string name="password_was_changed">Пароль был изменен</string>
    <string name="cancel_password_change_question">Отменить изменение пароля?</string>
    <string name="regenerate_secret_key_question">Перегенерировать секретный ключ?</string>
    <string name="regeneration_of_secret_key_canceled">Перегенерация секретного ключа отменена</string>
    <string name="logout">Выйти</string>
    <string name="logout_confirmation">Вы уверены, что хотите выйти?</string>
    <string name="create_group">Создать группу</string>
    <string name="create_channel">Создать канал</string>
    <string name="delete_chat">Удалить этот чат?</string>
    <string name="delete_message">Удалить это сообщение?</string>
    <string name="deletion_canceled">Удаление отменено</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="account_deleting_confirmation">Вы уверены, что хотите удалить аккаунт</string>
    <string name="subscribe_to_channel_text">Подписаться</string>
    <string name="join_group_text">Вступить</string>
    <string name="subscribe_to_channel_info_text">Вы подписались на канал</string>
    <string name="join_group_info_text">Вы вступили в группу</string>
    <string name="vchat_started">"Вчат" запущен</string>
</resources>
